--- a/students/safa-andac.html
+++ b/students/safa-andac.html
@@ -18,14 +18,14 @@
       <div class="vitals-container">
         <div class="profile-photo" id="joe-burgess-card"></div>
         <div class="social-icon-container">
-          <a href="https://twitter.com/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
+          <a href="https://twitter.com/SanDForcE94"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
           <a href="https://www.linkedin.com/in/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
-          <a href="https://github.com/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
+          <a href="https://github.com/SanD94"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
           <a href="http://joemburgess.com/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>
         </div>
         <div class="vitals-text-container">
-          <h1 class="profile-name">Joe Burgess</h1>
-          <h2 class="profile-location">New York, NY</h2>
+          <h1 class="profile-name">Safa Andac</h1>
+          <h2 class="profile-location">Istanbul, Turkey</h2>
           <div class="profile-quote">"Reduce to a previously solved problem"</div>
         </div>
       </div>
