--- a/students/safa-andac.html
+++ b/students/safa-andac.html
@@ -19,7 +19,7 @@
         <div class="profile-photo" id="safa-andac-card"></div>
         <div class="social-icon-container">
           <a href="https://twitter.com/SanDForcE94"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
-          <a href="https://www.linkedin.com/in/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
+          <a href="https://www.linkedin.com/in/safa-andac-46641185/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
           <a href="https://github.com/SanD94"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
           <a href="http://joemburgess.com/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>
         </div>
