automatically backed up by learn

--- a/students/safa-andac.html
+++ b/students/safa-andac.html
@@ -25,7 +25,7 @@
         <div class="vitals-text-container">
           <h1 class="profile-name">Safa Andac</h1>
           <h2 class="profile-location">Istanbul, Turkey</h2>
-          <div class="profile-quote">"Reduce to a previously solved problem"</div>
+          <div class="profile-quote">"To the limit"</div>
         </div>
       </div>
       <div class="details-container">
