--- a/students/safa-andac.html
+++ b/students/safa-andac.html
@@ -35,7 +35,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>I grew up outside of the Washington DC (NoVA!) and went to college at Carnegie Mellon University in Pittsburgh. After college, I worked as an Oracle consultant for IBM for a bit and now I teach here at The Flatiron School.</p>
+              <p>Love Competitive Programming and C++. Keen to learn anything.</p>
             </div>
           </div>
         </div>
@@ -45,8 +45,12 @@
               <h3>Education</h3>
             </div>
             <div class="description-holder">
-              <h4>Carnegie Mellon University</h4>
-              <h5>Bachelor of Science in Information Systems and Economics</h5>
+              <h4>Bogazici University</h4>
+              <h5>Bachelor of Science in Computer Engineering</h5>
+            </div>
+            <div class="description-holder">
+              <h4>Bogazici University</h4>
+              <h5>MA Student in Cognitive Science</h5>
             </div>
           </div>
         </div>
@@ -56,12 +60,8 @@
               <h3>Experience</h3>
             </div>
             <div class="description-holder">
-              <h4>The Flatiron School</h4>
-              <h5>Lead iOS Instructor</h5>
-            </div>
-            <div class="description-holder">
-              <h4>IBM</h4>
-              <h5>Consultant</h5>
+              <h4>Physhome</h4>
+              <h5>Backend Developer</h5>
             </div>
           </div>
         </div>
