automatically backed up by learn

--- a/students/safa-andac.html
+++ b/students/safa-andac.html
@@ -46,7 +46,7 @@
             </div>
             <div class="description-holder">
               <h4>Bogazici University</h4>
-              <h5>Bachelor of Science in Computer Engineering</h5>
+              <h5>BS in Computer Engineering</h5>
             </div>
             <div class="description-holder">
               <h4>Bogazici University</h4>
